RESOLVED FIXED226786
Fix speculated type in speculateNeitherDoubleNorHeapBigIntNorString
https://bugs.webkit.org/show_bug.cgi?id=226786
Summary Fix speculated type in speculateNeitherDoubleNorHeapBigIntNorString
Robin Morisset
Reported 2021-06-08 15:15:30 PDT
I had forgotten the HeapBigInt part.
Attachments
Patch (1.34 KB, patch)
2021-06-08 15:18 PDT, Robin Morisset
no flags
Robin Morisset
Comment 1 2021-06-08 15:16:27 PDT
Robin Morisset
Comment 2 2021-06-08 15:18:56 PDT
Mark Lam
Comment 3 2021-06-08 15:20:54 PDT
Comment on attachment 430903 [details] Patch r=me
Yusuke Suzuki
Comment 4 2021-06-08 15:21:20 PDT
r=me too.
EWS
Comment 5 2021-06-08 19:32:54 PDT
Committed r278642 (238624@main): <https://commits.webkit.org/238624@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430903 [details].
Radar WebKit Bug Importer
Comment 6 2021-06-08 19:33:20 PDT
Note You need to log in before you can comment on or make changes to this bug.