Fix speculated type in speculateNeitherDoubleNorHeapBigIntNorString https://bugs.webkit.org/show_bug.cgi?id=226786

Reviewed by Mark Lam.

I had forgotten the HeapBigInt part.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::speculateNeitherDoubleNorHeapBigIntNorString):


Canonical link: https://commits.webkit.org/238624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278642 268f45cc-cd09-0410-ab3c-d52691b4dbfc